Make more funny check magic examples

--- a/runbooks/1. DevOps Lab Check Magic Commands Available.ipynb
+++ b/runbooks/1. DevOps Lab Check Magic Commands Available.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# DevOpsLab Jupyter: Notebook example\n",
     "## Check Available Magic commands"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Objective\n",
     "Run this runbook to list the available \"Magic\" commands in your Jupyter Notebooks!\n",
@@ -18,52 +17,113 @@
     "The \"%lsmagic\" command will display all the available \"magic\" commands that the Jupyter Notebook will have available for using in the notebooks.\n",
     "\n",
     "Please, notice that some of the commands will require a double \"%\" character as they are applicable to the entire cell, meantime the single \"%\" character will only apply to the line where is located."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%lsmagic"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "%pinfo"
-   ]
+    "variable1 = 'hola'\r\n",
+    "variable2 = 'mundo'\r\n",
+    "variable3 = 50"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "%who"
-   ]
+    "%pinfo variable1"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "%time"
-   ]
+    "\r\n",
+    "%who int"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "%notebook ExampleNotebookAPI"
-   ]
+    "%time\r\n",
+    "import random\r\n",
+    "for i in range(0, 1000000):\r\n",
+    "    random.random()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "%env"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "%env my_var=\"This is my new defined environment variable\""
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "%env my_var"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "%load ./some_required_external_file.py"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "say_hello()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "%run show_something.py"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
