somehting was wrong with the load

--- a/runbooks/1. DevOps Lab Check Magic Commands Available.ipynb
+++ b/runbooks/1. DevOps Lab Check Magic Commands Available.ipynb
@@ -102,7 +102,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "%load ./some_required_external_file.py"
+    "%load /runbooks/some_required_external_file.py"
    ],
    "outputs": [],
    "metadata": {}
