showing %run capability with a plot

--- a/runbooks/1. DevOps Lab Check Magic Commands Available.ipynb
+++ b/runbooks/1. DevOps Lab Check Magic Commands Available.ipynb
@@ -120,6 +120,15 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "%matplotlib inline"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
     "%run show_something.py"
    ],
    "outputs": [],
