--- a/runbooks/3. DevOps Lab Terraform installation.ipynb
+++ b/runbooks/3. DevOps Lab Terraform installation.ipynb
@@ -2,89 +2,84 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# DevOpsLab Jupyter: Notebook example\n",
     "## Terraform Installation runbook"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "### Objective\n",
-    "\n",
-    "Run this runbook to install Terraform in a system\n",
-    "\n",
-    "### Steps to ckeck\n",
-    "\n",
-    "1. Connect to system\n",
-    "2. Verify if Terraform is running\n",
-    "\n",
-    "The script will show a menu to select the Operation System objective for the installation and it will execute the appropiate command."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+    "### Objective\r\n",
+    "\r\n",
+    "Run this runbook to install Terraform in a system\r\n",
+    "\r\n",
+    "### Steps to ckeck\r\n",
+    "\r\n",
+    "1. Connect to system\r\n",
+    "2. Verify if Terraform is running\r\n",
+    "\r\n",
+    "The script will show a menu to select the Operation System objective for the installation and it will execute the appropiate command to start the installation (NOTE: Installaion will not be completed. Just for demo lab purpose.)"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import sys # this allows you to use the sys.exit command to quit/logout of the application\n",
-    "\n",
-    "def menu():\n",
-    "    print(\"******* TERRAFORM INSTALATION RUNBOOK EXAMPLE *********\")\n",
-    "    #time.sleep(1)\n",
-    "    print()\n",
-    "\n",
-    "    choice = input(\"\"\"\n",
-    "                      A: Linux 64bits\n",
-    "                      B: Linux ARM64\n",
-    "                      C: Windows 64bits\n",
-    "                      Q: Salir\n",
-    "\n",
-    "                      Por favor, elija el sistema operativo sobre el que instalar: \"\"\")\n",
-    "\n",
-    "    if choice == \"A\" or choice ==\"a\":\n",
-    "        doLinux64()\n",
-    "    elif choice == \"B\" or choice ==\"b\":\n",
-    "        doLinuxARM64()\n",
-    "    elif choice == \"C\" or choice ==\"c\":\n",
-    "        doWindows64()\n",
-    "    elif choice==\"Q\" or choice==\"q\":\n",
-    "        sys.exit\n",
-    "    else:\n",
-    "        print(\"Debe elegir una de estas opciones: A,B o C\")\n",
-    "        print(\"Intentelo de nuevo\")\n",
-    "        menu()\n",
-    "\n",
-    "def doLinux64():\n",
-    "    !wget https://releases.hashicorp.com/terraform/0.14.5/terraform_0.14.5_linux_amd64.zip\n",
-    "    pass\n",
-    "    \n",
-    "def doLinuxARM64():\n",
-    "    !wget https://releases.hashicorp.com/terraform/0.14.5/terraform_0.14.5_linux_arm64.zip\n",
-    "    pass\n",
-    "\n",
-    "def doWindows64():\n",
-    "    !curl -O https://releases.hashicorp.com/terraform/0.14.5/terraform_0.14.5_windows_amd64.zip\n",
-    "    pass\n",
-    "\n",
-    "#empezar\n",
-    "menu()\n"
-   ]
+    "import sys # this allows you to use the sys.exit command to quit/logout of the application\r\n",
+    "\r\n",
+    "def menu():\r\n",
+    "    print(\"******* TERRAFORM INSTALATION RUNBOOK EXAMPLE *********\")\r\n",
+    "    #time.sleep(1)\r\n",
+    "    print()\r\n",
+    "\r\n",
+    "    choice = input(\"\"\"\r\n",
+    "                      A: Linux 64bits\r\n",
+    "                      B: Linux ARM64\r\n",
+    "                      C: Windows 64bits\r\n",
+    "                      Q: Salir\r\n",
+    "\r\n",
+    "                      Por favor, elija el sistema operativo sobre el que instalar: \"\"\")\r\n",
+    "\r\n",
+    "    if choice == \"A\" or choice ==\"a\":\r\n",
+    "        doLinux64()\r\n",
+    "    elif choice == \"B\" or choice ==\"b\":\r\n",
+    "        doLinuxARM64()\r\n",
+    "    elif choice == \"C\" or choice ==\"c\":\r\n",
+    "        doWindows64()\r\n",
+    "    elif choice==\"Q\" or choice==\"q\":\r\n",
+    "        sys.exit\r\n",
+    "    else:\r\n",
+    "        print(\"Debe elegir una de estas opciones: A,B o C\")\r\n",
+    "        print(\"Intentelo de nuevo\")\r\n",
+    "        menu()\r\n",
+    "\r\n",
+    "def doLinux64():\r\n",
+    "    !wget https://releases.hashicorp.com/terraform/0.14.5/terraform_0.14.5_linux_amd64.zip\r\n",
+    "    pass\r\n",
+    "    \r\n",
+    "def doLinuxARM64():\r\n",
+    "    !wget https://releases.hashicorp.com/terraform/0.14.5/terraform_0.14.5_linux_arm64.zip\r\n",
+    "    pass\r\n",
+    "\r\n",
+    "def doWindows64():\r\n",
+    "    !curl -O https://releases.hashicorp.com/terraform/0.14.5/terraform_0.14.5_windows_amd64.zip\r\n",
+    "    pass\r\n",
+    "\r\n",
+    "#empezar\r\n",
+    "menu()\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
