--- a/runbooks/3. DevOps Lab Terraform installation.ipynb
+++ b/runbooks/3. DevOps Lab Terraform installation.ipynb
@@ -3,14 +3,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# DevOpsLab Jupyter: Notebook example\n",
-    "## Terraform Installation runbook"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "# DevOpsLab Jupyter: Notebook example\r\n",
+    "\r\n",
+    "## Terraform Installation runbook\r\n",
+    "\r\n",
     "### Objective\r\n",
     "\r\n",
     "Run this runbook to install Terraform in a system\r\n",
@@ -71,13 +67,6 @@
     "#empezar\r\n",
     "menu()\r\n"
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
    "outputs": [],
    "metadata": {}
   }
