--- a/runbooks/5. Check Some Widgets.ipynb
+++ b/runbooks/5. Check Some Widgets.ipynb
@@ -2,72 +2,68 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "# DevOpsLab Jupyter: Notebook example\n",
-    "## Show widgets usage demo"
-   ]
+    "# DevOpsLab Jupyter: Notebook example\r\n",
+    "\r\n",
+    "## Show widgets usage demo\r\n",
+    "\r\n",
+    "### Objective\r\n",
+    "\r\n",
+    "Run this runbook to check some available widgets in the Jupyter Notebooks and how to use inside the Notebooks\r\n"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Objective\n",
-    "\n",
-    "Run this runbook to check some available widgets in the Jupyter Notebooks and how to use inside the Notebooks"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Showing maps with ipleaflet\n",
     "This widgets shows interactive maps that can be enrich using geojson-encoded data structures"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**Installation**"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "%pip install ipyleaflet\n"
-   ]
+    "%pip install ipyleaflet\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
    "source": [
     "!jupyter nbextension enable --py --sys-prefix ipyleaflet"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**Example**"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "from ipyleaflet import Map\n",
+    "from ipyleaflet import Map\r\n",
     "Map (center=[42.4671213247137, -2.4454133612], zoom=10)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
