clear the outputs

--- a/runbooks/2. DevOps Lab Check Process.ipynb
+++ b/runbooks/2. DevOps Lab Check Process.ipynb
@@ -14,7 +14,7 @@
     "### Steps to ckeck\r\n",
     "\r\n",
     "- 1. Connect to system\r\n",
-    "- 2. Verify if Filebeat Collector is running executing \"systemctl status filebeat\" as a admin user (\"filebeat\" user in our case)\r\n",
+    "- 2. Verify if Filebeat Collector is running executing \"systemctl status filebeat\" as a admin user (\"filebeat\" user in this example)\r\n",
     "\r\n",
     "### Expected result\r\n",
     "\r\n",
@@ -27,46 +27,29 @@
     "\r\n",
     "### Prerequisite\r\n",
     "\r\n",
-    "The pem file must be already allocated in the .ssh directory of the operator to allow a remote connection and the environment variables must be set appropiately.\r\n"
+    "The pem file must be already allocated in the .ssh directory of the operator to allow a remote connection and the environment variables must be set appropiately\r\n"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "source": [
     "%env remote_machine_pem_file=devopslab-london-new.pem\r\n",
     "%env remote_user_and_system=devopslab@ec2-18-169-243-95.eu-west-2.compute.amazonaws.com"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "env: remote_machine_pem_file=devopslab-london-new.pem\n",
-      "env: remote_user_and_system=devopslab@ec2-18-169-243-95.eu-west-2.compute.amazonaws.com\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "source": [
     "%%bash\r\n",
     "STATUS_SCRIPT=\"systemctl status filebeat\"\r\n",
     "ssh -i ~/.ssh/${remote_machine_pem_file} ${remote_user_and_system} \"${STATUS_SCRIPT}\""
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "` not found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {
     "scrolled": true
    }
