get more examples runbooks

--- a/runbooks/2. DevOps Lab Check Process.ipynb
+++ b/runbooks/2. DevOps Lab Check Process.ipynb
@@ -20,8 +20,8 @@
     "\r\n",
     "If the connection to the system is OK, then cell will be executed and the output will be\r\n",
     "\r\n",
-    "- \"Filebeat is not running\" or\r\n",
-    "- \"Filebeat is running\"\r\n",
+    "- \"Filebeat is Active since ...\" or\r\n",
+    "- \"Filebeat is inactive\"\r\n",
     "\r\n",
     "If the connection to the system is KO, then cell will be end with a connection error\r\n",
     "\r\n",
@@ -36,7 +36,7 @@
    "execution_count": null,
    "source": [
     "%env remote_machine_pem_file=devopslab-london-new.pem\r\n",
-    "%env remote_user_and_system=devopslab@ec2-18-169-243-95.eu-west-2.compute.amazonaws.com"
+    "%env remote_user_and_system=ubuntu@ec2-18-169-243-95.eu-west-2.compute.amazonaws.com"
    ],
    "outputs": [],
    "metadata": {}
@@ -68,7 +68,7 @@
     "If the connection to the system is OK, then cell will be executed and the output will be\r\n",
     "\r\n",
     "- \"Restarting Filebeat\" and\r\n",
-    "- \"Filebeat is running\"\r\n",
+    "- \"Filebeat is Active since ...\"\r\n",
     "\r\n",
     "If the connection to the system is KO, then cell will be end with a connection error\r\n",
     "\r\n",
