--- a/runbooks/3. DevOps Lab Terraform installation.ipynb
+++ b/runbooks/3. DevOps Lab Terraform installation.ipynb
@@ -40,11 +40,11 @@
     "                      Por favor, elija el sistema operativo sobre el que instalar: \"\"\")\r\n",
     "\r\n",
     "    if choice == \"A\" or choice ==\"a\":\r\n",
-    "        doLinux64()\r\n",
+    "        doGetLinux64()      \r\n",
     "    elif choice == \"B\" or choice ==\"b\":\r\n",
-    "        doLinuxARM64()\r\n",
+    "        doGetLinuxARM64()\r\n",
     "    elif choice == \"C\" or choice ==\"c\":\r\n",
-    "        doWindows64()\r\n",
+    "        doGetWindows64()\r\n",
     "    elif choice==\"Q\" or choice==\"q\":\r\n",
     "        sys.exit\r\n",
     "    else:\r\n",
@@ -52,16 +52,22 @@
     "        print(\"Intentelo de nuevo\")\r\n",
     "        menu()\r\n",
     "\r\n",
-    "def doLinux64():\r\n",
+    "def doGetLinux64():\r\n",
     "    !wget https://releases.hashicorp.com/terraform/0.14.5/terraform_0.14.5_linux_amd64.zip\r\n",
+    "    # !unzip terraform_0.14.5_linux_amd64.zip\r\n",
+    "    # !./terraform init    \r\n",
     "    pass\r\n",
     "    \r\n",
-    "def doLinuxARM64():\r\n",
+    "def doGetLinuxARM64():\r\n",
     "    !wget https://releases.hashicorp.com/terraform/0.14.5/terraform_0.14.5_linux_arm64.zip\r\n",
+    "    # !unzip terraform_0.14.5_linux_arm64.zip\r\n",
+    "    # !./terraform init    \r\n",
     "    pass\r\n",
     "\r\n",
-    "def doWindows64():\r\n",
+    "def doGetWindows64():\r\n",
     "    !curl -O https://releases.hashicorp.com/terraform/0.14.5/terraform_0.14.5_windows_amd64.zip\r\n",
+    "    # !unzip terraform_0.14.5_windows_amd64.zip\r\n",
+    "    # !./terraform init    \r\n",
     "    pass\r\n",
     "\r\n",
     "#empezar\r\n",
