Including API execution instructions

--- a/runbooks/6. Notebooks as API.ipynb
+++ b/runbooks/6. Notebooks as API.ipynb
@@ -43,8 +43,21 @@
   {
    "cell_type": "markdown",
    "source": [
-    "When your code is ready, you must register in the KernelGateway using \n",
-    "$jupyter kernelgateway --KernelGatewayApp.api='kernel_gateway.notebook_http' --KernelGatewayApp.seed_uri='/runbooks/ExampleNotebookAPI.ipynb'"
+    "When your code is ready, you must register in the KernelGateway using the following sentence (that will maintain a open session. If you want to open in background, you must set appropiately)\r\n",
+    "\r\n",
+    "```bash\r\n",
+    "$jupyter kernelgateway --KernelGatewayApp.api='kernel_gateway.notebook_http' --KernelGatewayApp.seed_uri='/runbooks/ExampleNotebookAPI.ipynb'\r\n",
+    "[KernelGatewayApp] Kernel Started\r\n",
+    "...\r\n",
+    "```\r\n",
+    "\r\n",
+    "To access the API from your system type (as example, in another bash terminal):\r\n",
+    "\r\n",
+    "```bash\r\n",
+    "$ curl \"http://localhost/convert?angle=360\"\r\n",
+    "{\"CconvertedAngle:\": 6.283185307179586 }\r\n",
+    "$\r\n",
+    "```\r\n"
    ],
    "metadata": {}
   },
