--- a/runbooks/DevSecOps runbooks/1.1.AWS_Boto3_Installation.ipynb
+++ b/runbooks/DevSecOps runbooks/1.1.AWS_Boto3_Installation.ipynb
@@ -2,75 +2,68 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "changing-thought",
-   "metadata": {},
    "source": [
     "# AWS Boto3 library Installation\n",
     "## DevOpsLab Example\n",
     "\n",
     "### Prerequisite tasks\n",
     "To set up this example, you must first have *pip* installed in your system"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "advance-ethnic",
-   "metadata": {},
    "source": [
     "### Connect to target system (optional)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "noble-jewel",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%run \"0.0. Connect to the target system.ipynb\""
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "ordinary-costume",
-   "metadata": {},
    "source": [
     "### Install the *boto3* library"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "efficient-remains",
-   "metadata": {},
    "source": [
     "Install the *boto3* library using the *pip install boto3*"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "strategic-essay",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "%%bash -s \"$target_host\" \"$user\" \"$password\"\n",
-    "pip3 show boto3\n",
-    "if [ $? -eq 0 ]; then\n",
-    "  echo \"boto3 library already installed\"\n",
-    "else\n",
-    "  echo \"Starting installation of boto3 library\"\n",
-    "  echo $3 | sudo -S -H pip3 install boto3\n",
-    "  pip3 show boto3\n",
-    "fi"
-   ]
+    "%%bash -s \"$target_host\" \"$user\" \"$password\"\r\n",
+    "if [ $(pip3 list|grep boto3|wc -l) == 1 ]; then\r\n",
+    "  echo \"boto3 library already installed for this user\"\r\n",
+    "else\r\n",
+    "  echo \"Starting installation of boto3 library for this user\"\r\n",
+    "  # UNCOMMENT THIS IS YOU WANT TO INSTALL FOR SUDO USER: echo $3 | sudo -S -H pip3 install boto3\r\n",
+    "  pip3 install boto3\r\n",
+    "fi\r\n",
+    "pip3 show boto3"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "disturbed-petroleum",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
