update to last AWS code available

--- a/runbooks/DevSecOps runbooks/1.2.AWS_SecretManager_GetSecret_Example.ipynb
+++ b/runbooks/DevSecOps runbooks/1.2.AWS_SecretManager_GetSecret_Example.ipynb
@@ -2,8 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "changing-thought",
-   "metadata": {},
    "source": [
     "# AWS Secret Management\n",
     "## DevOpsLab Example\n",
@@ -20,92 +18,102 @@
     "- Create a secret with the AWS Secrets Manager, as described in the [AWS Secrets Manager Developer Guide](https://docs.aws.amazon.com/secretsmanager/latest/userguide/manage_create-basic-secret.html) and it has been described in the Lab.\n",
     "- Install boto3 library in your environment using *pip install boto3* as described in the **\"1.1.AWS_Boto3_Installation\"** notebook if it is not already done\n",
     "- Modify the parameters \"secret_name\" and \"region_name\" to set your own data in the next code for the example"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "ordinary-costume",
-   "metadata": {},
    "source": [
     "### Retrieve the secret value"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "efficient-remains",
-   "metadata": {},
    "source": [
     "The following example shows how to:\n",
     "Retrieve a secret value using [get_secret_value](https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/secretsmanager.html#SecretsManager.Client.get_secret_value) funtion"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "strategic-essay",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import boto3\n",
+    "import boto3\r\n",
     "from botocore.exceptions import ClientError"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "engaging-table",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "def get_secret():\n",
-    "    secret_name = \"my_secret_name\"\n",
-    "    region_name = \"my_region_name\"\n",
-    "    \n",
-    "    session = boto3.session.Session()\n",
-    "    client = session.client(\n",
-    "        service_name='secretsmanager',\n",
-    "        region_name=region_name,\n",
-    "    )\n",
-    "\n",
-    "    try:\n",
-    "        get_secret_value_response = client.get_secret_value(\n",
-    "            SecretId=secret_name)\n",
-    "    except ClientError as e:\n",
-    "        if e.response['Error']['Code'] == 'ResourceNotFoundException':\n",
-    "            print(\"The requested secret \" + secret_name + \" was not found\")\n",
-    "        elif e.response['Error']['Code'] == 'InvalidRequestException':\n",
-    "            print(\"The request was invalid due to:\", e)\n",
-    "        elif e.response['Error']['Code'] == 'InvalidParameterException':\n",
-    "            print(\"The request had invalid params:\", e)\n",
-    "    else:\n",
-    "        # Secrets Manager decrypts the secret value using the associated KMS CMK\n",
-    "        # Depending on whether the secret was a string or binary, only one of these fields will be populated\n",
-    "        if 'SecretString' in get_secret_value_response:\n",
-    "            text_secret_data = get_secret_value_response['SecretString']\n",
-    "        else:\n",
-    "            binary_secret_data = get_secret_value_response['SecretBinary']\n",
-    "\n",
-    "        # Your code goes here.\n",
+    "def get_secret():\r\n",
+    "    secret_name = \"my_secret_name\"\r\n",
+    "    region_name = \"my_region_name\"\r\n",
+    "    \r\n",
+    "    session = boto3.session.Session()\r\n",
+    "    client = session.client(\r\n",
+    "        service_name='secretsmanager',\r\n",
+    "        region_name=region_name,\r\n",
+    "    )\r\n",
+    "\r\n",
+    "    try:\r\n",
+    "        get_secret_value_response = client.get_secret_value(\r\n",
+    "            SecretId=secret_name)\r\n",
+    "    except ClientError as e:\r\n",
+    "        if e.response['Error']['Code'] == 'DecryptionFailureException':\r\n",
+    "            # Secrets Manager can't decrypt the protected secret text using the provided KMS key.\r\n",
+    "            # Deal with the exception here, and/or rethrow at your discretion.\r\n",
+    "            raise e\r\n",
+    "        elif e.response['Error']['Code'] == 'InternalServiceErrorException':\r\n",
+    "            # An error occurred on the server side.\r\n",
+    "            # Deal with the exception here, and/or rethrow at your discretion.\r\n",
+    "            raise e\r\n",
+    "        elif e.response['Error']['Code'] == 'InvalidParameterException':\r\n",
+    "            # You provided an invalid value for a parameter.\r\n",
+    "            # Deal with the exception here, and/or rethrow at your discretion.\r\n",
+    "            raise e\r\n",
+    "        elif e.response['Error']['Code'] == 'InvalidRequestException':\r\n",
+    "            # You provided a parameter value that is not valid for the current state of the resource.\r\n",
+    "            # Deal with the exception here, and/or rethrow at your discretion.\r\n",
+    "            raise e\r\n",
+    "        elif e.response['Error']['Code'] == 'ResourceNotFoundException':\r\n",
+    "            # We can't find the resource that you asked for.\r\n",
+    "            # Deal with the exception here, and/or rethrow at your discretion.\r\n",
+    "            raise e\r\n",
+    "    else:\r\n",
+    "        # Decrypts secret using the associated KMS CMK.\r\n",
+    "        # Depending on whether the secret is a string or binary, one of these fields will be populated.\r\n",
+    "        if 'SecretString' in get_secret_value_response:\r\n",
+    "            secret = get_secret_value_response['SecretString']\r\n",
+    "        else:\r\n",
+    "            decoded_binary_secret = base64.b64decode(get_secret_value_response['SecretBinary'])\r\n",
+    "            \r\n",
+    "    # Your code goes here. \r\n",
+    "\r\n",
     "        print (\"The Secret that has been retrieved and can be used is: \", text_secret_data)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "short-agency",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "get_secret()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "scenic-spanking",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
