just formating text instructions

--- a/runbooks/DevSecOps runbooks/1.2.AWS_SecretManager_GetSecret_Example.ipynb
+++ b/runbooks/DevSecOps runbooks/1.2.AWS_SecretManager_GetSecret_Example.ipynb
@@ -3,21 +3,25 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# AWS Secret Management\n",
-    "## DevOpsLab Example\n",
-    "\n",
-    "### Prerequisite tasks\n",
-    "To set up and run this example, you must first set up the following:\n",
-    "- Install AWS CLI 2 as described in the **\"1.0.AWS_CLI_2_Installation\"** notebook.\n",
-    "- Configure your AWS credentials, as described in [Quickstart](https://boto3.amazonaws.com/v1/documentation/api/latest/guide/quickstart.html) using the AWS CLI or the AWS Console IAM Manager.\n",
-    "   - Run \"aws-configure\" from the console. \n",
-    "   - Input your \"AWS Access Key ID\" and \"AWS Secret Access Key\" and \"Default region name\".\n",
-    "       - This will create a directory \".aws\" and the files \"config\" and \"credentials\" (you must edit later if required). \n",
-    "       - Boto3 will also search the ~/.aws/config file when looking for configuration values. You can change the location of this file by setting the AWS_CONFIG_FILE environment variable.\n",
-    "   - **NOTE**: The credential file has your AWS Keys so must not be located in a public repository.\n",
-    "- Create a secret with the AWS Secrets Manager, as described in the [AWS Secrets Manager Developer Guide](https://docs.aws.amazon.com/secretsmanager/latest/userguide/manage_create-basic-secret.html) and it has been described in the Lab.\n",
-    "- Install boto3 library in your environment using *pip install boto3* as described in the **\"1.1.AWS_Boto3_Installation\"** notebook if it is not already done\n",
-    "- Modify the parameters \"secret_name\" and \"region_name\" to set your own data in the next code for the example"
+    "# AWS Secret Management\r\n",
+    "\r\n",
+    "## DevOpsLab Example\r\n",
+    "\r\n",
+    "### Prerequisite tasks\r\n",
+    "\r\n",
+    "To set up and run this example, you must first set up the following:\r\n",
+    "\r\n",
+    "1. Install AWS CLI 2 as described in the **\"1.0.AWS_CLI_2_Installation\"** notebook.\r\n",
+    "2. Configure your AWS credentials, as described in [Quickstart](https://boto3.amazonaws.com/v1/documentation/api/latest/guide/quickstart.html) using the AWS CLI or the AWS Console IAM Manager.\r\n",
+    "3. Run locally the \"aws configure\" from the console to store locally your credentials to connect to AWS using the CLI.\r\n",
+    "   - Input your \"AWS Access Key ID\" and \"AWS Secret Access Key\" and \"Default region name\".\r\n",
+    "   - This will create a directory \".aws\" and the files \"config\" and \"credentials\" (you must edit later if required).\r\n",
+    "4. Create a secret with the AWS Secrets Manager, as described in the [AWS Secrets Manager Developer Guide](https://docs.aws.amazon.com/secretsmanager/latest/userguide/manage_create-basic-secret.html) and it has been described in the Lab.\r\n",
+    "5. Install boto3 library in your environment as described in the **\"1.1.AWS_Boto3_Installation\"** notebook (if it is not already done)\r\n",
+    "6. Modify the parameters \"secret_name\" and \"region_name\" to set your own data in the next cell code for this example.\r\n",
+    "  \r\n",
+    "**NOTE**: Boto3 will also search the ~/.aws/config file when looking for configuration values. You can change the location of this file by setting the AWS_CONFIG_FILE environment variable.\r\n",
+    "**NOTE**: The credential file has your AWS Keys so must not be located in a public source control repository.\r\n"
    ],
    "metadata": {}
   },
